Center the tables, fix the spacing a bit

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -276,6 +276,11 @@ strong {
     text-align: center;
 }
 
+.centered-table {
+    text-align: center;
+    margin: 0px auto;
+}
+
 .hidden {
     display: none;
 }
